@@ -18,6 +18,7 @@ Version 2024.xxxxx (xxxxx 2024)
 - Fixed: Hardware Setup, hiding extra parameters when selecting a python plugin
 - Fixed: PythonEx framework, two notifications where send for switch type devices
 - Fixed: Python framework, custom image loading
+- Fixed: Data Pushers, Forecast for Weather Station subtypes
 - Removed: Cereal Proxy (not needed anymore)
 - Changed: Custom Templates are not cached in browser
 - Changed: EvoHome, now making use of general logging system
